src/blocks/modules/index/index.scss
.index {
    width: 100vw;
    height: 100vh;

    &__container {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        align-items: center;
        height: 100%;
    }

    &__header {
        text-align: center;

        @media (max-width:767px) {
            margin-top: 60px;
        }

        @media (min-width:768px) {
            margin-top: 100px;
        }

        &--h1 {
            font-style: normal;
            font-weight: 600;
            font-size: 36px;
            background: $light-gradient;
            -webkit-background-clip: text;
            -webkit-text-fill-color: transparent;

            @media screen and (prefers-color-scheme: dark) {
                background: $dark-gradient;
                -webkit-background-clip: text;
                -webkit-text-fill-color: transparent;
            }

            @media (max-width:767px) {
                font-size: 28px;
                margin-bottom: 2px;
            }

            @media (min-width:768px) {
                margin-bottom: 10px;
            }
        }

        &--h2 {
            font-style: normal;
            font-weight: 450;
            font-size: 28px;
            background: $light-gradient;
            -webkit-background-clip: text;
            -webkit-text-fill-color: transparent;

            @media (max-width:767px) {
                font-size: 20px;
            }

            @media screen and (prefers-color-scheme: dark) {
                background: $dark-gradient;
                -webkit-background-clip: text;
                -webkit-text-fill-color: transparent;
            }
        }
    }

    &__links {
        display: flex;
        justify-content: center;
        align-items: center;

        @media (max-width:767px) {
            margin-bottom: 20px;
            justify-content: space-between;
            width: 100%;
        }

        @media (min-width:768px) {
            margin-bottom: 60px;
            margin-top: 100px;

            &--link+&--link {
                margin-left: 30px;
            }
        }

        &--link {
            .icon {
                width: 40px;
                height: 40px;
                @include transition($transition);

                &:hover {
                    opacity: .76;
                }

                &-vk {
                    content: url(../img/svg/vk.svg);

                    @media screen and (prefers-color-scheme: dark) {
                        content: url(../img/svg/vk-dark.svg);
                    }
                }

                &-github {
                    content: url(../img/svg/github.svg);

                    @media screen and (prefers-color-scheme: dark) {
                        content: url(../img/svg/github-dark.svg);
                    }
                }

                &-telegram {
                    content: url(../img/svg/telegram.svg);

                    @media screen and (prefers-color-scheme: dark) {
                        content: url(../img/svg/telegram-dark.svg);
                    }
                }
            }
        }
    }
}

